--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "symfony/routing": "7.2.*",
         "symfony/runtime": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
+        "symfony/validator": "7.2.*",
+        "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.2.*",
+        "twbs/bootstrap": "^5.3",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
@@ -76,6 +79,8 @@
         }
     },
     "require-dev": {
+        "phpunit/phpunit": "^11.5",
+        "symfony/maker-bundle": "^1.61",
         "symfony/stopwatch": "7.2.*",
         "symfony/web-profiler-bundle": "7.2.*"
     }
