--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/http-kernel": "7.2.*",
         "symfony/routing": "7.2.*",
         "symfony/runtime": "7.2.*",
+        "symfony/security-bundle": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
         "symfony/validator": "7.2.*",
         "symfony/webpack-encore-bundle": "^2.2",
